projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-endpoint-interface/aws_configs/us-east-1/InternetGateways.json
{
 "InternetGateways": [
  {
   "Attachments": [
    {
     "State": "available",
     "VpcId": "vpc-072d45b801aeffef2"
    }
   ],
   "InternetGatewayId": "igw-051ef323d8b6da33a",
   "OwnerId": "554773406868",
   "Tags": [
    {
     "Key": "Name",
     "Value": "testing"
    }
   ]
  }
 ]
}
