projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-endpoint-interface/aws_configs/us-east-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-0a428e16e9a99d901",
     "RouteTableId": "rtb-07e4f0e11d543c220",
     "SubnetId": "subnet-0bb8615d8368ece31"
    },
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-0f65502a6d599f902",
     "RouteTableId": "rtb-07e4f0e11d543c220",
     "SubnetId": "subnet-0611b848137c513d1"
    }
   ],
   "OwnerId": "554773406868",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-07e4f0e11d543c220",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-051ef323d8b6da33a",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "testing-igw"
    }
   ],
   "VpcId": "vpc-072d45b801aeffef2"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-09ed48f1f8d66bc8b",
     "RouteTableId": "rtb-0b6aa7ed8aa28057b"
    }
   ],
   "OwnerId": "554773406868",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0b6aa7ed8aa28057b",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-072d45b801aeffef2"
  }
 ]
}
