projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-endpoint-interface/aws_configs/us-east-1/Subnets.json
{
 "Subnets": [
  {
   "AssignIpv6AddressOnCreation": false,
   "AvailabilityZone": "us-east-1a",
   "AvailabilityZoneId": "use1-az2",
   "AvailableIpAddressCount": 250,
   "CidrBlock": "10.1.1.0/24",
   "DefaultForAz": false,
   "Ipv6CidrBlockAssociationSet": [],
   "MapPublicIpOnLaunch": true,
   "OwnerId": "554773406868",
   "State": "available",
   "SubnetArn": "arn:aws:ec2:us-east-1:554773406868:subnet/subnet-0611b848137c513d1",
   "SubnetId": "subnet-0611b848137c513d1",
   "Tags": [
    {
     "Key": "Name",
     "Value": "testing_10.1.1.0/24"
    }
   ],
   "VpcId": "vpc-072d45b801aeffef2"
  },
  {
   "AssignIpv6AddressOnCreation": false,
   "AvailabilityZone": "us-east-1a",
   "AvailabilityZoneId": "use1-az2",
   "AvailableIpAddressCount": 249,
   "CidrBlock": "10.1.101.0/24",
   "DefaultForAz": false,
   "Ipv6CidrBlockAssociationSet": [],
   "MapPublicIpOnLaunch": false,
   "OwnerId": "554773406868",
   "State": "available",
   "SubnetArn": "arn:aws:ec2:us-east-1:554773406868:subnet/subnet-0bb8615d8368ece31",
   "SubnetId": "subnet-0bb8615d8368ece31",
   "Tags": [
    {
     "Key": "Name",
     "Value": "testing_10.1.101.0/24"
    }
   ],
   "VpcId": "vpc-072d45b801aeffef2"
  }
 ]
}
